--- a/ZcTree.html
+++ b/ZcTree.html
@@ -26,7 +26,7 @@
 		<script type="text/javascript" src="js/ZcTreeCreate.js"></script>
 		<script type="text/javascript" src="js/bootstrap.min.js" ></script>
 		<script>
-			var Depts = [{"RECID":"1","LEVEL":"1","PARENTS":"","STDNAME":"久其"},{"RECID":"2","LEVEL":"2","PARENTS":"1","STDNAME":"资源部"},{"RECID":"3","LEVEL":"2","PARENTS":"1","STDNAME":"人力部"},{"RECID":"4","LEVEL":"3","PARENTS":"2","STDNAME":"后勤部"}]
+			var Depts = [{"RECID":"1","LEVEL":"1","PARENTS":"","STDNAME":"是的"},{"RECID":"2","LEVEL":"2","PARENTS":"1","STDNAME":"实打实"},{"RECID":"3","LEVEL":"2","PARENTS":"1","STDNAME":"低得多"},{"RECID":"4","LEVEL":"3","PARENTS":"2","STDNAME":"我问问"}]
 			var ZcTree = $("#depts").toCreateZcTree({
 		  		"id":"RECID",
 		  		"level":"LEVEL",
